--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ challenge_video.mp4
 harder_challenge_video.mp4
 project_video.mp4
 .ipynb_checkpoints
+example_writeup.pdf
+writeup_template.md
+examples
+output_images
+test_images
